# justmyresource

./: AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
docs/: architecture.md  async-notes.md
src/justmyresource/: __init__.py  __main__.py  cli.py  core.py  pack_utils.py  render.py  types.py
src/justmyresource/packs/: __init__.py
tests/: conftest.py  test_cli.py  test_prefix_resolution.py  test_registry_core.py  test_render.py  test_types.py  test_zipped_resource_pack.py
